@@ -1,5 +1,6 @@
 package frc.robot.commands;
 
+import edu.wpi.first.math.Pair;
 import edu.wpi.first.wpilibj.smartdashboard.SmartDashboard;
 import edu.wpi.first.wpilibj2.command.CommandBase;
 import frc.robot.subsystems.CameraSubsystem;
@@ -37,18 +38,19 @@ public class AprilTagMoverCommand extends CommandBase {
     }
 
     private void driveCloserToTarget() {
+        double rightDriveSpeed = 0;
+        double leftDriveSpeed = 0;
         CameraData camResult = cameraSubsystem.getTarget();
         if (camResult.pipelineType == PipelineType.APRIL_TAG) {
-            double translation = 0;
             if (camResult.hasTargets()) {
-                if (camResult.getTargets().get(0).targetDistance > 1.1) translation = 0.15;
-                else if (camResult.getTargets().get(0).targetDistance < 0.9) translation = -0.15;
-                else {
-                    cameraSubsystem.setPipeline(PipelineType.REFLECTIVE);
-                    findReflectiveTarget = true;
-                }
+                double distance = camResult.getTargets().get(0).targetDistance;
+                double angle = camResult.getTargets().get(0).targetXAngle;
+                Pair<Double, Double> speeds = getDiffDriveValues(distance, angle);
+                rightDriveSpeed = speeds.getSecond();
+                leftDriveSpeed = speeds.getFirst();
+
             }
-            driveSubsystem.move(translation, 0, 0);
+            driveSubsystem.move(rightDriveSpeed, 0, 0);
         } else System.out.println("Waiting for pipeline to switch to APRIL TAG mode");
     }
     private void driveCloserToTarget_NoRetro() {
@@ -81,9 +83,8 @@ public class AprilTagMoverCommand extends CommandBase {
         CameraData camResult = cameraSubsystem.getTarget();
         if (camResult.pipelineType == PipelineType.REFLECTIVE) {
             if (camResult.hasTargets()) {
-                /* TODO calculate vx, vy, radsPerSec */
-                if (camResult.getTargets().get(0).targetXAngle < -5) driveSubsystem.move(0, 0.0, 0.0);
-                else if (camResult.getTargets().get(0).targetXAngle > 5) driveSubsystem.move(0, 0.0, 0.0);
+                if (camResult.getTargets().get(0).targetXAngle < -5) driveSubsystem.move(-0.3, 0.3,0);
+                else if (camResult.getTargets().get(0).targetXAngle > 5) driveSubsystem.move(0.3, -0.3,0);
                 else { 
                     driveSubsystem.stopModules();
                     cameraSubsystem.setPipeline(PipelineType.APRIL_TAG);
@@ -91,6 +92,35 @@ public class AprilTagMoverCommand extends CommandBase {
                 }
             } else driveSubsystem.stopModules();
         } else System.out.println("Waiting for pipeline to switch to REFLECTIVE mode");
+    }
+
+    /**
+     * Calculate the left and right drive power based on distance and angle.
+     * @param distance distance
+     * @param angle angle
+     * @return the power for the left and right drive
+     */
+    protected static Pair<Double, Double> getDiffDriveValues(double distance, double angle) {
+        final double maxSpeed = 0.7;
+        double speed = maxSpeed;
+        if (distance > 4) speed = maxSpeed * 0.7;
+        else if (distance > 2) speed = maxSpeed;
+        else if (distance > 1.3) speed = maxSpeed * 0.8;
+        else if (distance > 1) speed = maxSpeed * 0.5;
+        else if (distance < 0.7) speed = -maxSpeed * 0.5;
+        else speed = 0;
+
+        double turnRatio = 0;
+        if (Math.abs(angle) > 3) {
+            turnRatio = 0.7;
+        } else if (Math.abs(angle) > 7) {
+            turnRatio = 0.9;
+        }
+        if (angle < 0) turnRatio *= -1;
+        if (speed < 0) turnRatio *= -1;
+        double rightDriveSpeed = speed + (speed * turnRatio);
+        double leftDriveSpeed = speed - (speed * turnRatio);
+        return new Pair<Double, Double>(leftDriveSpeed, rightDriveSpeed);
     }
 
 }
